# azure-sphere-samples

./: .clang-format  .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  LICENSE  LICENSE.md  README.md  ethernet-setup-instructions.md
Samples/AvnetArducamMini/: CMakeLists.txt  README.md  app_manifest.json  arducam.c  arducam.h  delay.c  exit_codes.h  main.c
Samples/AvnetArducamMini/arducam_driver/: ArduCAM.c  ArduCAM.h  ll.c  ll.h
Samples/AvnetArducamMiniToAzureStorage/: .gitignore  CMakeLists.txt  LICENSE  README.md  app_manifest.json  delay.h  main.c
Samples/AvnetArducamMiniToAzureStorage/arducam_driver/: ArduCAM.c  ArduCAM.h  ll.c  ll.h  ov2640_regs.c  ov2640_regs.h  ov5642_regs.h
Samples/AvnetAzureSphereHacksterTTC/HighLevelExampleApp/: CMakeLists.txt  README.md  app_manifest.json  build_options.h  deviceTwin.h  device_twin.c  direct_methods.c  direct_methods.h  eventloop_timer_utilities.c  exit_codes.h  i2c.c  i2c.h  main.c  oled.c  oled.h  sd1306.c  sd1306.h
Samples/AvnetBT510BtSensor/: CMakeLists.txt  README.md  app_manifest.json  bt510.c  bt510.h  build_options.h  deviceTwin.h  device_twin.c  exit_codes.h  iotConnect.c  iotConnect.h  main.c
Samples/AvnetBT510BtSensor/IoTConnect/: BT510 RV Monitor_template.JSON
Samples/AvnetDefaultProject/HighLevelExampleApp/: CMakeLists.txt  README.md  READMEStartWithIoTCentral.md  READMEStartWithIoTHub.md  app_manifest.json  build_options.h  deviceTwin.h  device_twin.c  direct_methods.c  direct_methods.h  exit_codes.h  i2c.c  iotConnect.c  iotConnect.h  launch.vs.json  m4_support.c  m4_support.h  main.c  oled.c  oled.h  sd1306.c  sd1306.h
Samples/AvnetDefaultProject/RealTimeExampleApp/: AvnetAlsPt19RTApp.imagepackage  AvnetAlsPt19RTApp.md  AvnetGenericRTApp.imagepackage  AvnetGenericRTApp.md  AvnetGenericRTExample.imagepackage  AvnetGenericRTExample.md  AvnetGroveGPS.imagepackage  AvnetGroveGPS.md  CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  mt3620-intercore.c  mt3620-intercore.h  mt3620-uart-poll.h
Samples/AvnetIoTConnectTemplate/: AzureIoTExampleTemplate_template.JSON  CMakeLists.txt  IoTCentral.md  IoTHub.md  README.md  app_manifest.json  exit_codes.h  iotConnect.c  iotConnect.h  main.c
Samples/AvnetServoDriverPWM/PWM_HighLevelApp/: CMakeLists.txt  app_manifest.json  main.c  servo.c  servo.h
Samples/AvnetWs2812LedExample/: CMakeLists.txt  README.md  app_manifest.json  main.c
Samples/AvnetWs2812LedExample/WS2811_Driver/: ws2811.c  ws2811.h
Samples/AvnetWs2812LedExample/WS2812B_Driver/: ws2812b.c  ws2812b.h
Samples/AzureIoT/: .gitignore  AzureIoT.sln  AzureIoTTroubleshooting.md  CMakeLists.txt  CMakeSettings.json  IoTCentral.md  IoTEdge.md  IoTHub.md  README.md  READMEAddDPS.md  READMEAddIoTEdge.md  READMEAddWebProxy.md  READMEStartWithIoTCentral.md  READMEStartWithIoTHub.md  Troubleshooting.md  app_manifest.json  launch.vs.json  main.c
Samples/AzureIoT/AzureIoT/: AzureIoT.filters  AzureIoT.vcxproj  app_manifest.json  main.c
Samples/AzureIoT/DPS/: connection_dps.c  connection_dps.h  manifest_helper.psm1
Samples/AzureIoT/IoTEdge/: CMakeLists.txt  options_iot_edge.c
Samples/AzureIoT/IoTHub/: connection_iot_hub.c  connection_iot_hub.h  manifest_helper.psm1
Samples/AzureIoT/Tools/: NOTICE.txt  ShowIoTCentralConfig.exe.config
Samples/AzureIoT/certs/: README.md
Samples/AzureIoT/common/: CMakeLists.txt  azure_iot.c  azure_iot.h  cloud.c  cloud.h  connection.h  exitcodes.h  main.c  options.h  user_interface.c  user_interface.h
Samples/AzureIoT/script/: validate_manifest.ps1
Samples/DNSServiceDiscovery/: CMakeLists.txt  CMakeSettings.json  DNSServiceDiscovery.sln  README.md  app_manifest.json  dns-sd.c  launch.vs.json  main.c
Samples/DNSServiceDiscovery/DNSServiceDiscovery/: DNSServiceDiscovery.vcxproj  DNSServiceDiscovery.vcxproj.filters  app_manifest.json  dns-sd.c  dns-sd.h  main.c
Samples/ExternalMcuUpdate/AzureSphere_HighLevelApp/: CMakeLists.txt  README.md  app_manifest.json  launch.vs.json  main.c  mem_buf.c
Samples/GPIO/GPIO_HighLevelApp/: CMakeLists.txt  CMakeSettings.json  GPIO_HighLevelApp.sln  README.md  app_manifest.json  eventloop_timer_utilities.c  launch.vs.json  main.c
Samples/HTTPS/HTTPS_Curl_Easy/: CMakeLists.txt  HTTPS_Curl_Easy.sln  README.md  app_manifest.json  launch.vs.json  main.c
Samples/HTTPS/HTTPS_Curl_Multi/: CMakeLists.txt  HTTPS_Curl_Multi.sln  README.md  app_manifest.json  curlmulti.h  epoll_timerfd_utilities.c  exitcode_curlmulti.h  launch.vs.json  log_utils.h  main.c  ui.c  ui.h  web_client.c  web_client.h
Samples/HelloWorld/HelloWorld_HighLevelApp/: CMakeLists.txt  README.md  app_manifest.json  launch.vs.json  main.c
Samples/HelloWorld/HelloWorld_RTApp_MT3620_BareMetal/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  app_manifest.json  launch.vs.json  linker.ld  main.c  vcpkg-configuration.json
Samples/I2C/I2C_LSM6DS3_HighLevelApp/: CMakeLists.txt  CMakeSettings.json  I2C_LSM6DS3_HighLevelApp.sln  README.md  app_manifest.json  launch.vs.json  main.c
Samples/IntercoreComms/IntercoreComms_HighLevelApp/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  IntercoreComms_HighLevelApp.sln  README.md  app_manifest.json  launch.vs.json  main.c
Samples/IntercoreComms/IntercoreComms_RTApp_MT3620_BareMetal/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  app_manifest.json  launch.vs.json  linker.ld  logical-dpc.c  logical-dpc.h  logical-intercore.c  logical-intercore.h  main.c  mt3620-baremetal.h  mt3620-intercore.c  mt3620-intercore.h  mt3620-timer.c  mt3620-timer.h  mt3620-uart-poll.c  mt3620-uart-poll.h
Samples/Iperf/: CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  app_manifest.json  launch.vs.json
Samples/Iperf/overrides/: iperf_api.c  iperf_config.h  iperf_util.c  version.h
Samples/LoggingToAzure/: .clang-format  CMakeLists.txt  README.md  app_manifest.json  azure_iot.c  azure_iot.h  exitcodes.h  log_azure.c  log_azure.h  main.c  options.h  utils.c  utils.h
Samples/LoggingToAzure/IoTHub/: CMakeLists.txt  README.md  options_iot_hub.c
Samples/WiFi/WiFi_HighLevelApp/: README.md  (+8 more)
(+1068 files in other folders)
